--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <body>
     <div class="container">
       <h1>Systemübersicht</h1>
-      <input
+      <!-- <input
         type="text"
         id="search-input"
         class="form-control"
         placeholder="Suchen"
-      />
+      /> -->
+      <!-- tabelle wird dynamisch mit JS manipuliert -->
       <table>
         <thead>
           <tr>
